<resources>
    <string name="app_name">Dacontrolagent</string>
    <string name="hello_blank_fragment">Bonjour fragment vide</string>
    <string name="itinerary">ITINERAIRE</string>
    <string name="loginMessage">Connectez-vous avec les identifiants fournis par votre coordinateur pour commencer votre tournée.</string>
    <string name="login">CONNEXION</string>
    <string name="go">ALLER</string>
    <string name="scan">SCANNER</string>
    <string name="detailsBar">DETAILS</string>
    <string name="packages_remaining">colis restants</string>
    <string name="packages_delivered">colis livrés</string>
    <string name="close_nav">Fermer</string>
    <string name="open_nav">Ouvrir</string>
    <string name="update">Mettre à jour</string>
    <string name="done">C\'est OK</string>
    <string name="delivered_package">Ce colis a été livré ! Félicitations</string>
    <string name="mail">Courriel</string>
    <string name="password">Mot de passe</string>
    <string name="log_in">Se connecter</string>
    <string name="call">APPELER</string>
    <string name="no_routes">Aucun itinéraire pour l\'instant ! Vos routes s\'afficheront lorsque ce sera prêt</string>
    <string name="gg_maps_not_found">Google Maps n\'est pas installé sur votre téléphone</string>
    <string name="scan_data">Scannez le code-barres et prenez une photo de la livraison</string>
    <string name="invalid_packages">colis invalides</string>
    <string name="authentication_unsuccessful">Authentification échouée.</string>
    <string name="log_out">DECONNEXION</string>
    <string name="my_account">MON COMPTE</string>
    <string name="page_not_created">cette page n\'est pas encore créée</string>
</resources>