<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.example.dacontrolagent.MainActivity">



    <ImageView
        android:id="@+id/backgroundImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />
    <View
        android:id="@+id/backgroundFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D2000000" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="309dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="434dp"
        android:layout_below="@id/logo"
        android:padding="10dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"

            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/loginMessage"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/border_style"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="#AEFFFFFF"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:background="@drawable/border_style"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="10dp"
            android:layout_marginBottom="6dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="#AEFFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="match_parent"
            android:background="@drawable/custom_btn"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_extrabold"
            android:text="@string/log_in" />

    </LinearLayout>
    <!--
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.Theme.Dacontrolagent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            app:menu="@menu/app_bar_menu"
            app:navigationIcon="@drawable/baseline_apps_24"
            app:popupTheme="@style/Base.Theme.Dacontrolagent"
            app:titleTextColor="@color/white">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:lineSpacingExtra="34sp"
                android:text="@string/itinerary"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:letterSpacing="0.3"
                android:textSize="15sp" />

        </com.google.android.material.appbar.MaterialToolbar>


    </com.google.android.material.appbar.AppBarLayout>
-->



</RelativeLayout>